<resources>
    <string name="app_name">Yay Film!</string>
    <string name="List_name">Daftar Film</string>
    <string name="description">Deskripsi</string>
    <string name="list">List</string>
    <string name="about">About</string>
    <string name="judul">Judul :</string>
    <string name="sutradara">Sutradara :</string>
    <string name="tanggal_rilis">Tanggal Rilis :</string>
    <string name="full_name">Affan Abdullah Izzuddin</string>
    <string name="email">affana959@gmail.com</string>
    <string name="share">share</string>
</resources>